updated the er-diagram

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,3 +1,12 @@
+/* Avatar image styling for profile pictures */
+.avatar-img {
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #eee;
+    background: #fff;
+    width: 40px;
+    height: 40px;
+}
 /* FlowDeck Main CSS - Professional Theme */
 
 :root {
