--- a/app/templates/admin/edit_user.html
+++ b/app/templates/admin/edit_user.html
@@ -75,7 +75,7 @@
                                 <label for="profile_picture" class="form-label">Profile Picture</label>
                                 {% if user.profile_picture %}
                                 <div class="mb-2">
-                                    <img src="{{ user.profile_picture }}" alt="{{ user.name }}" 
+                                    <img src="{{ url_for('static', filename='uploads/profiles/' + (user.profile_picture if user.profile_picture else 'default.png')) }}" alt="{{ user.name }}" class="avatar-img">
                                          class="rounded-circle" width="60" height="60">
                                 </div>
                                 {% endif %}
