--- a/app/templates/admin/users.html
+++ b/app/templates/admin/users.html
@@ -152,7 +152,7 @@ body {
                                     <td>
                                         <div class="d-flex align-items-center">
                                             {% if user.profile_picture %}
-                                            <img src="{{ user.profile_picture }}" alt="{{ user.name }}" 
+                                            <img src="{{ url_for('static', filename='uploads/profiles/' + (user.profile_picture if user.profile_picture else 'default.png')) }}" alt="{{ user.name }}" class="avatar-img">
                                                  class="rounded-circle me-2" width="40" height="40">
                                             {% else %}
                                             <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-2"
