--- a/app/templates/meetings/create.html
+++ b/app/templates/meetings/create.html
@@ -100,6 +100,8 @@
     </div>
 
     <form method="POST" action="{{ url_for('meetings.create_meeting') }}" enctype="multipart/form-data" id="meetingForm">
+        {{ form.hidden_tag() if form else '' }}
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="row">
             <!-- Left Column -->
             <div class="col-md-8">
