--- a/app/templates/user/edit_profile.html
+++ b/app/templates/user/edit_profile.html
@@ -305,7 +305,7 @@ body::before {
                             <label for="profile_picture" class="form-label">Profile Picture</label>
                             {% if current_user.profile_picture %}
                             <div class="mb-2">
-                                <img src="{{ current_user.profile_picture }}" alt="{{ current_user.name }}" 
+                                <img src="{{ url_for('static', filename='uploads/profiles/' + (current_user.profile_picture if current_user.profile_picture else 'default.png')) }}" alt="{{ current_user.name }}" class="avatar-img">
                                      class="rounded-circle" width="60" height="60">
                             </div>
                             {% endif %}
