--- a/app/templates/tasks/view.html
+++ b/app/templates/tasks/view.html
@@ -204,9 +204,14 @@
             {% for comment in comments %}
             <div class="d-flex mb-3 pb-3 border-bottom">
               <div class="flex-shrink-0">
-                <div class="avatar-circle">
-                  {{ comment.user.name[0] if comment.user else '?' }}
-                </div>
+                {% if comment.user and comment.user.profile_picture %}
+                  {% set avatar = comment.user.profile_picture if comment.user.profile_picture else 'default.png' %}
+                  <img src="{{ url_for('static', filename='uploads/profiles/' + avatar) }}" alt="{{ comment.user.name }}" class="rounded-circle avatar-img" width="32" height="32">
+                {% else %}
+                  <div class="avatar-circle">
+                    {{ comment.user.name[0] if comment.user else '?' }}
+                  </div>
+                {% endif %}
               </div>
               <div class="flex-grow-1 ms-3">
                 <div class="d-flex justify-content-between">
