--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -341,9 +341,9 @@ body::before {
                                 <tr>
                                     <td>
                                         <div class="d-flex align-items-center">
-                                            {% if user.profile_picture %}
-                                            <img src="{{ user.profile_picture }}" alt="{{ user.name }}" 
-                                                 class="rounded-circle me-2" width="32" height="32">
+                                            {% set avatar = user.profile_picture if user.profile_picture else 'default.png' %}
+                                            {% if avatar and avatar != '' %}
+                                            <img src="{{ url_for('static', filename='uploads/profiles/' + avatar) }}" alt="{{ user.name }}" class="rounded-circle me-2" width="32" height="32">
                                             {% else %}
                                             <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-2"
                                                  style="width: 32px; height: 32px; font-size: 14px;">
